Recreated raphael function in d3

--- a/animate-along-a-path.html
+++ b/animate-along-a-path.html
@@ -5,10 +5,11 @@
 <title>Untitled Document</title>
 
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"> </script>
-<script src="http://www.nature.com/view/scripts/raphael/raphael.2.0.1.js"></script>
+<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"> </script> -->
+<!-- <script type="text/javascript"  src="http://d3js.org/d3.v3.min.js"></script> -->
 <link rel="stylesheet" href="css/animate-along-a-path.css" />
-
+<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/d3.v3.min.js"></script>
 <script type="text/javascript" src="js/animate-along-a-path.js"></script>
 
 
@@ -26,9 +27,9 @@
 
 <body>
 
-<div id="outerWrapper">
+<div class="outerWrapper">
 
-<div id="holder"></div>
+<div class="holder"></div>
   <div id="buttons">
     <div id="prev"> </div>
     <div id="next"> </div>
